// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialCard should expand last share credential card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="selectable"
  >
    <input
      checked=""
      class="selectOne"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <section
      class="shareExpanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <section>
        <dl
          class="details"
        >
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Credential name
            </dt>
            <dd
              class="detailValue"
            >
              Email Credential
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Status
            </dt>
            <dd
              class="detailValue"
            >
              Attested
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName required"
            >
              Email
            </dt>
            <dd
              class="detailValue"
            >
              <label
                class="shareLabel"
              >
                <input
                  checked=""
                  class="share"
                  name="Email"
                  readonly=""
                  type="checkbox"
                />
                <span />
                mockEmail@mock.mock
              </label>
            </dd>
          </div>
        </dl>
        <p
          class="requiredInfo"
        >
          * required
        </p>
      </section>
      <h4
        class="shareTechnical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render collapased share credential card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="selectable"
  >
    <input
      class="selectOne"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <label
      class="expand"
      for="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
    >
      <section
        class="collapsedShareCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          Trusted Entity attester
        </p>
      </section>
    </label>
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      class="expand"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card with backup notification 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      aria-label="Not downloaded Email Credential mockEmail@mock.mock (Not backed up)"
      class="downloadPrompt"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Not downloaded Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card on click 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJjcmVkZW50aWFsIjp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayJ9LCJvd25lciI6ImRpZDpraWx0OmxpZ2h0OjAwNG9VaUszRXZUY3pjNnVrWUxFVjU3QnV4emtXOXprc0tSY2haWFlHU29jTG1XRTVOIn0sImNsYWltSGFzaGVzIjpbIjB4MTQ0NTk3ZDI4NDVlMzI1ZGZmZDRlNTFhOTRlM2U5YzA0YjUyZGMxNTczZTY2YWZjNjkzODQ2ZDkxZjMxYTcxMyIsIjB4MzE3N2VhNDFmNzZkMDY2ZDE5MTIzYzJjYjBkZTEzYTM3ZDYzOTA2ZDJjNTE5ZTM2ZmJmZDc3NzNmYWMxYjcxOCIsIjB4OWQyZGNhZjUyMzhkNmJjNGJjZjAzMjhhZWRiMTY4OTQzNmUwNzdlYmY2MTk4YjZjNGU5NjE2NjQ4MDdlYWVkZiIsIjB4Y2VlMTkzZmZkZmE2MzQ4NzkwN2RmZTA4NDhhZTE1MGQ0YTcxOTZjYzFlM2Q1YmQyYzg5YmVjYjU0MDJlZmMwNyJdLCJjbGFpbU5vbmNlTWFwIjp7IjB4NTc0NThhNjk3MmU3ODIyM2NkNGY3ZjRjNTkyMzZlYTc2ZjM4N2FlNTcxYWI3ZTc5NDYwZjU2ZjJhYTk3NjIzZiI6ImQwYzlkNjQ3LTQyZWYtNGQ0NC1iNjAzLTNiNzc2MjYwYTZkZCIsIjB4Y2VmZTJiODhkMTA4MzQ4NjlkYWQzZThkNzMwNmY1YWE5OWExZjA3ODIxNGFkZWFlNzljYmVlZDMwM2U2MzhhZiI6IjZiNjIzMDhjLTg1NTctNGI2MS1hYzAyLThmOTA1NTU1ZDY3YiIsIjB4OGJlMzJkN2U5Y2M1MDE1YmY3MWI1YzQ1NTUwYTg3OTBjNDNiOWEyNmRiZmE5YTg1MjM4NzEyMTE3NDVkMzNhMyI6IjI0NzM5NGMwLWQ0NmItNDgyYS1iMGM1LTQ5M2FlYjUwNmQ2MSIsIjB4MTM2MWE3YmE3NTEyNTZlOWFjNmIzZTNlMjQ5MTJlNTBlNjhiZWY2NzhjNTEzMmMxMWM5NTY3ODIyMGUzYmY1ZSI6IjA3Yjk1ZjE3LTNmMjMtNGE5ZS04ZjQzLTMzODgxMjczNjgyYyJ9LCJsZWdpdGltYXRpb25zIjpbXSwiZGVsZWdhdGlvbklkIjpudWxsLCJyb290SGFzaCI6IjB4YmU3ZmNjN2FhMDE4NmIwNWZkMTE2YzEwMGUyZDY3M2ZiOTUxMTYzNjkzNzg4NjQwY2U2MDMyYWQyZjcwMGRhZSJ9LCJuYW1lIjoiRW1haWwgQ3JlZGVudGlhbCIsImNUeXBlVGl0bGUiOiJFbWFpbCIsImF0dGVzdGVyIjoiVHJ1c3RlZCBFbnRpdHkgYXR0ZXN0ZXIiLCJzdGF0dXMiOiJhdHRlc3RlZCIsImlzRG93bmxvYWRlZCI6dHJ1ZX0="
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card with backup notification 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="downloadPromptExpanded"
          download="Not downloaded Email Credential-Email.json"
          href="data:text/json;base64,eyJjcmVkZW50aWFsIjp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayJ9LCJvd25lciI6ImRpZDpraWx0OjRvZUo3Nmhkajg0eG53Q05xaWpVSFVDVG1md1hnU1o0dm14TEVpVEVZZ1FkQkNjWiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweDg2YTIwMDUxZTZkMWVlY2IwZGQ2ZTljN2IzYjBjZjk0Njg2N2U2NjJiNTI1ZWYyZTlhZmU4NDI4ZjY2MTZhZTAifSwibmFtZSI6Ik5vdCBkb3dubG9hZGVkIEVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOmZhbHNlfQ=="
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Not downloaded Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0x86a20051e6d1eecb0dd6e9c7b3b0cf946867e662b525ef2e9afe8428f6616ae0
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded card without backup and delete buttons 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;

exports[`CredentialCard should render expanded share credential card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="selectable"
  >
    <input
      checked=""
      class="selectOne"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <section
      class="shareExpanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <section>
        <dl
          class="details"
        >
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Credential name
            </dt>
            <dd
              class="detailValue"
            >
              Email Credential
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Status
            </dt>
            <dd
              class="detailValue"
            >
              Attested
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName required"
            >
              Email
            </dt>
            <dd
              class="detailValue"
            >
              <label
                class="shareLabel"
              >
                <input
                  checked=""
                  class="share"
                  name="Email"
                  readonly=""
                  type="checkbox"
                />
                <span />
                mockEmail@mock.mock
              </label>
            </dd>
          </div>
        </dl>
        <p
          class="requiredInfo"
        >
          * required
        </p>
      </section>
      <h4
        class="shareTechnical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render uncollapsible card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJjcmVkZW50aWFsIjp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayJ9LCJvd25lciI6ImRpZDpraWx0OmxpZ2h0OjAwNG9VaUszRXZUY3pjNnVrWUxFVjU3QnV4emtXOXprc0tSY2haWFlHU29jTG1XRTVOIn0sImNsYWltSGFzaGVzIjpbIjB4MTQ0NTk3ZDI4NDVlMzI1ZGZmZDRlNTFhOTRlM2U5YzA0YjUyZGMxNTczZTY2YWZjNjkzODQ2ZDkxZjMxYTcxMyIsIjB4MzE3N2VhNDFmNzZkMDY2ZDE5MTIzYzJjYjBkZTEzYTM3ZDYzOTA2ZDJjNTE5ZTM2ZmJmZDc3NzNmYWMxYjcxOCIsIjB4OWQyZGNhZjUyMzhkNmJjNGJjZjAzMjhhZWRiMTY4OTQzNmUwNzdlYmY2MTk4YjZjNGU5NjE2NjQ4MDdlYWVkZiIsIjB4Y2VlMTkzZmZkZmE2MzQ4NzkwN2RmZTA4NDhhZTE1MGQ0YTcxOTZjYzFlM2Q1YmQyYzg5YmVjYjU0MDJlZmMwNyJdLCJjbGFpbU5vbmNlTWFwIjp7IjB4NTc0NThhNjk3MmU3ODIyM2NkNGY3ZjRjNTkyMzZlYTc2ZjM4N2FlNTcxYWI3ZTc5NDYwZjU2ZjJhYTk3NjIzZiI6ImQwYzlkNjQ3LTQyZWYtNGQ0NC1iNjAzLTNiNzc2MjYwYTZkZCIsIjB4Y2VmZTJiODhkMTA4MzQ4NjlkYWQzZThkNzMwNmY1YWE5OWExZjA3ODIxNGFkZWFlNzljYmVlZDMwM2U2MzhhZiI6IjZiNjIzMDhjLTg1NTctNGI2MS1hYzAyLThmOTA1NTU1ZDY3YiIsIjB4OGJlMzJkN2U5Y2M1MDE1YmY3MWI1YzQ1NTUwYTg3OTBjNDNiOWEyNmRiZmE5YTg1MjM4NzEyMTE3NDVkMzNhMyI6IjI0NzM5NGMwLWQ0NmItNDgyYS1iMGM1LTQ5M2FlYjUwNmQ2MSIsIjB4MTM2MWE3YmE3NTEyNTZlOWFjNmIzZTNlMjQ5MTJlNTBlNjhiZWY2NzhjNTEzMmMxMWM5NTY3ODIyMGUzYmY1ZSI6IjA3Yjk1ZjE3LTNmMjMtNGE5ZS04ZjQzLTMzODgxMjczNjgyYyJ9LCJsZWdpdGltYXRpb25zIjpbXSwiZGVsZWdhdGlvbklkIjpudWxsLCJyb290SGFzaCI6IjB4YmU3ZmNjN2FhMDE4NmIwNWZkMTE2YzEwMGUyZDY3M2ZiOTUxMTYzNjkzNzg4NjQwY2U2MDMyYWQyZjcwMGRhZSJ9LCJuYW1lIjoiRW1haWwgQ3JlZGVudGlhbCIsImNUeXBlVGl0bGUiOiJFbWFpbCIsImF0dGVzdGVyIjoiVHJ1c3RlZCBFbnRpdHkgYXR0ZXN0ZXIiLCJzdGF0dXMiOiJhdHRlc3RlZCIsImlzRG93bmxvYWRlZCI6dHJ1ZX0="
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
    <div />
  </li>
</div>
`;
